[package]
name = "material_color"
version = "0.1.4"
edition = "2021"
build = "build.rs"
authors = ["deotime"]
description = "Crate for using material color designs"
repository = "https://github.com/DeoTimeTheGithubUser/material_color"
license = "MIT"
keywords = ["color", "gradient"]

[dependencies]
serde = { version = "1.0.160", optional = true, features = ["derive"] }
colorgrad = { version = "0.6.2", optional = true, default-features = false }

[build-dependencies]
syn = "2.0.15"
serde = "1.0.160"
serde_json = "1.0.96"
anyhow = "1.0.71"
prettyplease = "0.2.4"

[features]
serde = ["dep:serde"]
colorgrad = ["dep:colorgrad"]